Increase shared Fx project reference consistency - ensure App.Runtime and App.Ref (if needed) packages are built before creating correlation payload,   before testing locally, and before building Interop test assets   - check `$(IsHelixJob)` to slightly reduce the number of App.Ref / App.Runtime references     - set property in RunHelix.ps1 too   - only the shared Fx / targeting pack layouts are needed in some cases but always pack for further consistency - move `$(IsTargetingPackBuilding)` to Versions.props; make property available in helix.proj
nits:
- add a few more comments about targeting pack to Versions.props
- modernize documentation in the project template README

--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -24,13 +24,23 @@
     <!-- Servicing builds have different characteristics for the way dependencies, baselines, and versions are handled. -->
     <IsServicingBuild Condition=" '$(PreReleaseVersionLabel)' == 'servicing' ">true</IsServicingBuild>
     <VersionPrefix>$(AspNetCoreMajorMinorVersion).$(AspNetCorePatchVersion)</VersionPrefix>
+
+    <!--
+      IsTargetingPackBuilding controls build of targeting pack installers/packages. Targeting packs do not
+      produce patch versions in most servicing builds because no API changes are allowed in patches.
+    -->
+    <IsTargetingPackBuilding
+        Condition=" '$(IsTargetingPackBuilding)' == '' AND '$(AspNetCorePatchVersion)' != '0' ">false</IsTargetingPackBuilding>
+    <IsTargetingPackBuilding Condition=" '$(IsTargetingPackBuilding)' == '' ">true</IsTargetingPackBuilding>
     <!--
       TargetingPackVersionPrefix is used by projects, like .deb and .rpm, which use slightly different version formats.
-      It's also used in root Directory.Build.targets to determine the version of the last-built targeting pack.
+      It's also used in root Directory.Build.targets to determine the version of the last-built targeting pack. We use
+      the previous targeting pack when current build doesn't create a new one.
     -->
     <TargetingPackVersionPrefix>$(VersionPrefix)</TargetingPackVersionPrefix>
-    <!-- Targeting packs do not produce patch versions in servicing builds. No API changes are allowed in patches. -->
-    <TargetingPackVersionPrefix Condition="'$(IsTargetingPackBuilding)' != 'true'">$(AspNetCoreMajorMinorVersion).0</TargetingPackVersionPrefix>
+    <TargetingPackVersionPrefix
+        Condition=" !$(IsTargetingPackBuilding) ">$(AspNetCoreMajorMinorVersion).0</TargetingPackVersionPrefix>
+
     <ExperimentalVersionPrefix>0.3.$(AspNetCorePatchVersion)</ExperimentalVersionPrefix>
     <!-- ANCM versioning is intentionally 10 + AspNetCoreMajorVersion because earlier versions of ANCM shipped as 8.x. -->
     <AspNetCoreModuleVersionMajor>$([MSBuild]::Add(10, $(AspNetCoreMajorVersion)))</AspNetCoreModuleVersionMajor>
