--- a/src/Grpc/test/InteropTests/InteropTests.csproj
+++ b/src/Grpc/test/InteropTests/InteropTests.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <ContainsFunctionalTestAssets>true</ContainsFunctionalTestAssets>
     <TargetFramework>$(DefaultNetCoreTargetFramework)</TargetFramework>
@@ -10,13 +9,29 @@
     <Compile Include="..\..\..\Shared\Process\ProcessEx.cs" Link="Helpers\ProcessEx.cs" />
     <Compile Include="..\..\..\Shared\Process\ProcessExtensions.cs" Link="Helpers\ProcessExtensions.cs" />
 
-    <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute" Condition="'$(IsHelixJob)' != 'true'">
-      <_Parameter1>ServerLogPath</_Parameter1>
-      <_Parameter2>$(ArtifactsLogDir)InteropServer.log</_Parameter2>
-    </AssemblyAttribute>
-
-    <FunctionalTestAssetProjectReference Include="..\testassets\InteropClient\InteropClient.csproj" />
-    <FunctionalTestAssetProjectReference Include="..\testassets\InteropWebsite\InteropWebsite.csproj" />
+    <ProjectReference Include="$(RepoRoot)\src\Framework\App.Ref\src\Microsoft.AspNetCore.App.Ref.csproj"
+      Condition=" $(IsTargetingPackBuilding) "
+      Private="false"
+      ReferenceOutputAssembly="false"
+      SkipGetTargetFrameworkProperties="true" />
+    <ProjectReference Include="$(RepoRoot)\src\Framework\App.Runtime\src\Microsoft.AspNetCore.App.Runtime.csproj"
+      Condition=" !$(IsTargetingPackBuilding) "
+      Private="false"
+      ReferenceOutputAssembly="false"
+      SkipGetTargetFrameworkProperties="true" />
   </ItemGroup>
 
+  <!-- Shared framework definitely exists when this target runs. Test asset builds require shared Fx. -->
+  <Target Name="PublishTestAssets" BeforeTargets="Publish;RunTests;Test">
+    <ItemGroup>
+      <_ProjectsToPublish Include="..\testassets\InteropClient\InteropClient.csproj"
+        AdditionalProperties="PublishDir=$(PublishDir)%(Filename)" />
+      <_ProjectsToPublish Include="..\testassets\InteropWebsite\InteropWebsite.csproj"
+        AdditionalProperties="PublishDir=$(PublishDir)%(Filename)" />
+    </ItemGroup>
+
+    <MSBuild Projects="@(_ProjectsToPublish)"
+      Targets="Restore;Publish"
+      Properties="Configuration=$(Configuration)" />
+  </Target>
 </Project>
