Reduce build steps in our pipelines - `msbuild` now enforces the ordering as needed for tests - do not build Java projects in quarantined tests
nits:
- be explicit and use `-arch x64` in affected build steps
- remove `/p:BuildInteropProjects=true /p:RunTemplateTests=true` because an earlier commit removed
`$(BuildInteropProjects)` and `$(RunTemplateTests)` defaults to `true`

--- a/.azure/pipelines/helix-matrix.yml
+++ b/.azure/pipelines/helix-matrix.yml
@@ -24,23 +24,15 @@ variables:
 jobs:
 - template: jobs/default-build.yml
   parameters:
-    jobName: Helix_matrix_x64
-    jobDisplayName: 'Tests: Helix full matrix x64'
+    jobName: Helix_matrix
+    jobDisplayName: 'Tests: Helix full matrix'
     agentOs: Windows
     timeoutInMinutes: 480
     steps:
-    # Build the shared framework
-    - script: ./eng/build.cmd -ci -nobl -all -pack -arch x64
+    - script: ./eng/build.cmd -ci -nobl -test -pack -arch x64 -all
+              -projects eng\helix\helix.proj /p:IsHelixJob=true
               /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-      displayName: Build shared fx
-    - script: ./eng/build.cmd -ci -nobl -noBuildRepoTasks -restore -noBuild -noBuildNative -projects src/Grpc/**/*.csproj
-              /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-      displayName: Restore interop projects
-    - script: .\eng\build.cmd -ci -nobl -noBuildRepoTasks -NoRestore -test -all -noBuildNative
-              -projects eng\helix\helix.proj
-              /p:IsHelixJob=true /p:BuildInteropProjects=true /p:RunTemplateTests=true
-              /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-      displayName: Run build.cmd helix target
+      displayName: Build and run Helix tests
       env:
         HelixApiAccessToken: $(HelixApiAccessToken) # Needed for internal queues
         SYSTEM_ACCESSTOKEN: $(System.AccessToken) # We need to set this env var to publish helix results to Azure Dev Ops
