--- a/.azure/pipelines/quarantined-pr.yml
+++ b/.azure/pipelines/quarantined-pr.yml
@@ -49,22 +49,15 @@ jobs:
 - template: jobs/default-build.yml
   parameters:
     jobName: Helix_quarantined_x64
-    jobDisplayName: 'Tests: Helix'
+    jobDisplayName: 'Tests: Helix x64'
     agentOs: Windows
     timeoutInMinutes: 120
     steps:
-    # Build the shared framework
-    - script: ./eng/build.cmd -ci -nobl -all -pack -arch x64
+    # Don't build Java projects because tests there cannot be quarantined and nothing else depends on them.
+    - script: ./eng/build.cmd -ci -nobl -test -pack -arch x64 -all -noBuildJava
+              -projects eng\helix\helix.proj /p:IsHelixJob=true /p:IsHelixPRCheck=true /p:RunQuarantinedTests=true
               /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-      displayName: Build shared fx
-    - script: ./eng/build.cmd -ci -nobl -noBuildRepoTasks -restore -noBuild -noBuildNative -projects src/Grpc/**/*.csproj
-              /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-      displayName: Restore interop projects
-    - script: ./eng/build.cmd -ci -nobl -noBuildRepoTasks -noRestore -test -all -noBuildJava -noBuildNative
-              -projects eng\helix\helix.proj /p:IsHelixPRCheck=true /p:RunQuarantinedTests=true
-              /p:IsHelixJob=true /p:BuildInteropProjects=true /p:RunTemplateTests=true
-              /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-      displayName: Run build.cmd helix target
+      displayName: Build and run quarantined Helix tests
       continueOnError: true
       env:
         HelixApiAccessToken: $(HelixApiAccessToken) # Needed for internal queues
@@ -83,10 +76,10 @@ jobs:
     isAzDOTestingJob: true
     enablePublishTestResults: false
     steps:
-    - powershell: "& ./eng/build.ps1 -CI -nobl -all -pack -NoBuildJava"
-      displayName: Build
-    - script: ./eng/build.cmd -ci -nobl -test -NoRestore -NoBuild -NoBuilddeps "/p:RunQuarantinedTests=true /p:SkipHelixReadyTests=true"
-      displayName: Run Quarantined Tests
+    # Don't build Java projects because tests there cannot be quarantined and nothing else depends on them.
+    - script: ./eng/build.cmd -ci -nobl -test -pack -arch x64 -all -noBuildJava
+        /p:RunQuarantinedTests=true /p:SkipHelixReadyTests=true
+      displayName: Build and run Quarantined Tests
       continueOnError: true
     - task: PublishTestResults@2
       displayName: Publish Quarantined Test Results
@@ -116,10 +109,10 @@ jobs:
     isAzDOTestingJob: true
     enablePublishTestResults: false
     steps:
-    - bash: ./eng/build.sh --all --pack --ci --nobl --no-build-java
-      displayName: Build
-    - bash: ./eng/build.sh --no-build --ci --nobl --test -p:RunQuarantinedTests=true -p:SkipHelixReadyTests=true
-      displayName: Run Quarantined Tests
+    # Don't build Java projects because tests there cannot be quarantined and nothing else depends on them.
+    - bash: ./eng/build.sh --ci --nobl --test --pack -arch x64 --all --no-build-java
+        -p:RunQuarantinedTests=true -p:SkipHelixReadyTests=true
+      displayName: Build and run Quarantined Tests
       continueOnError: true
     - task: PublishTestResults@2
       displayName: Publish Quarantined Test Results
@@ -150,10 +143,10 @@ jobs:
     enablePublishTestResults: false
     useHostedUbuntu: false
     steps:
-    - bash: ./eng/build.sh --all --pack --ci --nobl --no-build-java
-      displayName: Build
-    - bash: ./eng/build.sh --no-build --ci --nobl --test -p:RunQuarantinedTests=true -p:SkipHelixReadyTests=true
-      displayName: Run Quarantined Tests
+    # Don't build Java projects because tests there cannot be quarantined and nothing else depends on them.
+    - bash: ./eng/build.sh --ci --nobl --test --pack -arch x64 --all --no-build-java
+        -p:RunQuarantinedTests=true -p:SkipHelixReadyTests=true
+      displayName: Build and run Quarantined Tests
       continueOnError: true
     - task: PublishTestResults@2
       displayName: Publish Quarantined Test Results
