--- a/.azure/pipelines/quarantined-tests.yml
+++ b/.azure/pipelines/quarantined-tests.yml
@@ -19,23 +19,16 @@ variables:
 jobs:
 - template: jobs/default-build.yml
   parameters:
-    jobName: Helix_quarantined_x64
+    jobName: Helix_quarantined
     jobDisplayName: 'Tests: Helix'
     agentOs: Windows
     timeoutInMinutes: 480
     steps:
-    # Build the shared framework
-    - script: ./eng/build.cmd -ci -nobl -all -pack -arch x64
+    # Don't build Java projects because tests there cannot be quarantined and nothing else depends on them.
+    - script: ./eng/build.cmd -ci -nobl -test -pack -arch x64 -all -noBuildJava
+              -projects eng\helix\helix.proj /p:IsHelixJob=true /p:RunQuarantinedTests=true
               /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-      displayName: Build shared fx
-    - script: ./eng/build.cmd -ci -nobl -noBuildRepoTasks -restore -noBuild -noBuildNative -projects src/Grpc/**/*.csproj
-              /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-      displayName: Restore interop projects
-    - script: ./eng/build.cmd -ci -nobl -noBuildRepoTasks -noRestore -test -all -noBuildJava -noBuildNative
-              -projects eng\helix\helix.proj /p:RunQuarantinedTests=true
-              /p:IsHelixJob=true /p:BuildInteropProjects=true /p:RunTemplateTests=true
-              /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-      displayName: Run build.cmd helix target
+      displayName: Build and run quarantined Helix tests
       continueOnError: true
       env:
         HelixApiAccessToken: $(HelixApiAccessToken) # Needed for internal queues
