--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -122,6 +122,7 @@
     <SystemTextEncodingsWebVersion>7.0.0-alpha.1.21612.5</SystemTextEncodingsWebVersion>
     <SystemTextJsonVersion>7.0.0-alpha.1.21612.5</SystemTextJsonVersion>
     <SystemThreadingChannelsVersion>7.0.0-alpha.1.21612.5</SystemThreadingChannelsVersion>
+    <SystemThreadingRateLimitingVersion>7.0.0-alpha.1.21612.5</SystemThreadingRateLimitingVersion>
     <!-- Only listed explicitly to workaround https://github.com/dotnet/cli/issues/10528 -->
     <MicrosoftNETCorePlatformsVersion>7.0.0-alpha.1.21612.5</MicrosoftNETCorePlatformsVersion>
     <!-- Packages from dotnet/efcore -->
