[release/5.0] Move to OSX.1015.Amd64.Open
nits:
- remove version from macOS job names
- remove mention of of macOS 10.14 in RunHelix.ps1

--- a/.azure/pipelines/quarantined-pr.yml
+++ b/.azure/pipelines/quarantined-pr.yml
@@ -95,7 +95,7 @@ jobs:
 - template: jobs/default-build.yml
   parameters:
     jobName: MacOS_Quarantined_Test
-    jobDisplayName: "Tests: macOS 10.14"
+    jobDisplayName: "Tests: macOS x64"
     agentOs: macOS
     timeoutInMinutes: 120
     isTestingJob: true
