[release/2.1] Move off of expiring machine pools (#38536)
* Move off of expiring machine pools

* Update korebuild

* Skip tests

* Fixup

* Update UserManagerSpecificationTests.cs

* Update UserManagerSpecificationTests.cs

* Update Microsoft.AspNetCore.Identity.Specification.Tests.csproj

* Always skip test for now

* Fixup

* Update Chromedriver

--- a/.azure/pipelines/e2e-tests.yml
+++ b/.azure/pipelines/e2e-tests.yml
@@ -3,7 +3,7 @@ trigger: none
 jobs:
 - job: Host_Windows
   pool:
-    vmImage: vs2017-win2016
+    vmImage: windows-latest
   strategy:
     maxParallel: 8
     matrix:
@@ -49,7 +49,7 @@ jobs:
       testResultsFiles: 'artifacts/logs/**/*.trx'
 - job: Host_macOS
   pool:
-    vmImage: macOS-10.14
+    vmImage: macOS-10.15
   strategy:
     maxParallel: 4
     # The ASP.NET Core 2.1.X templates are incompatible with Node10 on macOS
