--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,13 +20,14 @@
 	"extensions": [
 		"ms-dotnettools.csharp",
 		"EditorConfig.EditorConfig",
-		"k--kato.docomment"
+		"k--kato.docomment",
+    "dbaeumer.vscode-eslint"
 	],
 	"settings": {
 		// Loading projects on demand is better for larger codebases
 		"omnisharp.enableMsBuildLoadProjectsOnDemand": true,
 		"omnisharp.enableRoslynAnalyzers": true,
-		"omnisharp.enableEditorConfigSupport": true,
+		"omnisharp.enableEditorConfigSupport": true
 	},
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"onCreateCommand": "bash -i ${containerWorkspaceFolder}/.devcontainer/scripts/container-creation.sh",
