--- a/src/Components/Web.JS/package.json
+++ b/src/Components/Web.JS/package.json
@@ -12,6 +12,7 @@
     "preclean": "yarn install --mutex network --frozen-lockfile",
     "clean": "node node_modules/rimraf/bin.js ./dist/Debug ./dist/Release",
     "prebuild": "yarn run clean && yarn install --mutex network --frozen-lockfile",
+    "lint": "eslint -c ./src/.eslintrc.js --ext .ts ./src",
     "build": "yarn run build:debug && yarn run build:production",
     "build:debug": "cd src && node ../node_modules/webpack-cli/bin/cli.js --mode development --config ./webpack.config.js",
     "build:production": "cd src && node ../node_modules/webpack-cli/bin/cli.js --mode production --config ./webpack.config.js",
@@ -30,6 +31,7 @@
     "@typescript-eslint/parser": "^4.29.3",
     "babel-jest": "^27.1.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-header": "^3.1.1",
     "inspectpack": "^4.7.1",
     "jest": "^27.1.0",
     "rimraf": "^3.0.2",
