let omnisharp import required using statement at top

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,6 +27,7 @@
 		"omnisharp.enableMsBuildLoadProjectsOnDemand": true,
 		"omnisharp.enableRoslynAnalyzers": true,
 		"omnisharp.enableEditorConfigSupport": true,
+    "omnisharp.enableImportCompletion": true,
 	},
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"onCreateCommand": "bash -i ${containerWorkspaceFolder}/.devcontainer/scripts/container-creation.sh",
