--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
   "extensions": [
     "ms-dotnettools.csharp",
     "EditorConfig.EditorConfig",
-    "k--kato.docomment"
+    "k--kato.docomment",
+    "dbaeumer.vscode-eslint"
   ],
   "settings": {
     // Loading projects on demand is better for larger codebases
