Try building arm64 in main windows build

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -151,12 +151,12 @@ stages:
           publishOnError: true
           includeForks: true
 
-  # Build Windows (x64/x86)
+  # Build Windows (x64/x86/arm64)
   - template: jobs/default-build.yml
     parameters:
       codeSign: true
       jobName: Windows_build
-      jobDisplayName: "Build: Windows x64/x86"
+      jobDisplayName: "Build: Windows x64/x86/arm64"
       agentOs: Windows
       steps:
       - ${{ if notIn(variables['Build.Reason'], 'PullRequest') }}:
@@ -175,7 +175,7 @@ stages:
                 $(_BuildArgs)
                 $(_InternalRuntimeDownloadArgs)
                 $(Windows64LogArgs)
-        displayName: Build x64
+        displayName: Build x64/arm64
 
       # Build the x86 shared framework
       # This is going to actually build x86 native assets.
@@ -235,6 +235,22 @@ stages:
                 /p:PublishInstallerBaseVersion=true
                 $(WindowsInstallersLogArgs)
         displayName: Build Installers
+
+      # Windows installers bundle for arm64
+      - script: ./eng/build.cmd
+                -ci
+                -noBuildRepoTasks
+                -arch arm64
+                -sign
+                -buildInstallers
+                -noBuildNative
+                /p:DotNetSignType=$(_SignType)
+                /p:AssetManifestFileName=aspnetcore-win-arm64.xml
+                $(_BuildArgs)
+                $(_PublishArgs)
+                $(_InternalRuntimeDownloadArgs)
+                $(WindowsArm64InstallersLogArgs)
+        displayName: Build Arm64 Installers
 
       # A few files must also go to the VS package feed.
       - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest'), ne(variables.PostBuildSign, 'true')) }}:
@@ -357,7 +373,6 @@ stages:
             packagesToPush: 'artifacts/packages/**/VS.Redist.Common.AspNetCore.*.nupkg'
             nuGetFeedType: external
             publishFeedCredentials: 'DevDiv - VS package feed'
-
 
   # Build MacOS arm64
   - template: jobs/default-build.yml
