--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -341,6 +341,7 @@ stages:
                 -sign
                 -pack
                 -noBuildJava
+                -noBuildNative
                 /p:DotNetSignType=$(_SignType)
                 /p:OnlyPackPlatformSpecificPackages=true
                 $(_BuildArgs)
