--- a/test/SharedFx.UnitTests/SharedFx.UnitTests.csproj
+++ b/test/SharedFx.UnitTests/SharedFx.UnitTests.csproj
@@ -28,7 +28,7 @@
     </AssemblyAttribute>
     <AssemblyAttribute Include="Microsoft.AspNetCore.TestData">
       <_Parameter1>PreviousAspNetCoreReleaseVersion</_Parameter1>
-      <_Parameter2>$(PreviousAspNetCoreReleaseVersion)</_Parameter2>
+      <_Parameter2>2.1.30</_Parameter2>
     </AssemblyAttribute>
     <AssemblyAttribute Include="Microsoft.AspNetCore.TestData">
       <_Parameter1>ValidateBaseline</_Parameter1>
