Build arm64 shared fx

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -193,6 +193,21 @@ stages:
                 $(Windows86LogArgs)
         displayName: Build x86
 
+      # Build the arm64 shared framework
+      - script: ./eng/build.cmd
+                -ci
+                -arch arm64
+                -sign
+                -pack
+                -noBuildJava
+                -noBuildNative
+                /p:DotNetSignType=$(_SignType)
+                /p:OnlyPackPlatformSpecificPackages=true
+                $(_BuildArgs)
+                $(_InternalRuntimeDownloadArgs)
+                $(WindowsArm64LogArgs)
+        displayName: Build ARM64
+
       # Submit a manual build (in public or internal project) to validate changes to site extensions.
       - ${{ if ne(variables['Build.Reason'], 'PullRequest') }}:
         - script: .\src\SiteExtensions\build.cmd
@@ -315,65 +330,6 @@ stages:
       - ${{ if and(ne(variables['System.TeamProject'], 'public'), or(eq(parameters.testSourceIndexing, 'true'), eq(variables['Build.SourceBranch'], 'refs/heads/main'))) }}:
           - name: Windows_arm_SourceIndex
             path: $(Build.ArtifactStagingDirectory)/sourceIndex/
-
-  # Build Windows ARM64
-  - template: jobs/default-build.yml
-    parameters:
-      codeSign: true
-      jobName: Windows_arm64_build
-      jobDisplayName: "Build: Windows ARM64"
-      agentOs: Windows
-      installNodeJs: false
-      installJdk: false
-      artifacts:
-      - name: Windows_arm64_Logs
-        path: artifacts/log/
-        publishOnError: true
-        includeForks: true
-      - name: Windows_arm64_Packages
-        path: artifacts/packages/
-      - name: Windows_arm64_Installers
-        path: artifacts/installers/
-      steps:
-      - script: ./eng/build.cmd
-                -ci
-                -arch arm64
-                -sign
-                -pack
-                -noBuildJava
-                -noBuildNative
-                /p:DotNetSignType=$(_SignType)
-                /p:OnlyPackPlatformSpecificPackages=true
-                $(_BuildArgs)
-                $(_InternalRuntimeDownloadArgs)
-                $(WindowsArm64LogArgs)
-        displayName: Build ARM64
-
-      # Windows installers bundle for arm64
-      - script: ./eng/build.cmd
-                -ci
-                -noBuildRepoTasks
-                -arch arm64
-                -sign
-                -buildInstallers
-                -noBuildNative
-                /p:DotNetSignType=$(_SignType)
-                /p:AssetManifestFileName=aspnetcore-win-arm64.xml
-                $(_BuildArgs)
-                $(_PublishArgs)
-                $(_InternalRuntimeDownloadArgs)
-                $(WindowsArm64InstallersLogArgs)
-        displayName: Build Arm64 Installers
-
-      # A few files must also go to the VS package feed.
-      - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest'), ne(variables.PostBuildSign, 'true')) }}:
-        - task: NuGetCommand@2
-          displayName: Push Visual Studio packages
-          inputs:
-            command: push
-            packagesToPush: 'artifacts/packages/**/VS.Redist.Common.AspNetCore.*.nupkg'
-            nuGetFeedType: external
-            publishFeedCredentials: 'DevDiv - VS package feed'
 
   # Build MacOS arm64
   - template: jobs/default-build.yml
