--- a/src/Components/Web.JS/@types/dotnet/package.json
+++ b/src/Components/Web.JS/@types/dotnet/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dotnet-runtime",
+  "private": true,
   "description": ".NET is a developer platform with tools and libraries for building any type of app, including web, mobile, desktop, games, IoT, cloud, and microservices.",
   "repository": {
     "type": "git",
